railsapp_deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: railsapp-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: railsapp
    spec:
      containers:
      - name: railsapp
        image: brunoppl/rails-app
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
