railsapp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: railsapp-service
spec:
  selector:
    app: railsapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
